# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/user_auth/userauth.gni")
import("//foundation/aafwk/standard/feature.gni")

config("userauth_private_config") {
  include_dirs = [ "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include" ]
}

config("userauth_public_config") {
  include_dirs = [
    "./inc",
    "//base/user_iam/user_auth/interfaces/inner_api/common",
    "//base/user_iam/user_auth/interfaces/inner_api/user_auth",
    "//base/user_iam/user_auth/common/logs/user_auth/inc",
  ]
}

ohos_shared_library("userauth_framework") {
  sources = [
    "${userauth_frameworks_path}/user_auth/src/user_auth_native.cpp",
    "${userauth_frameworks_path}/user_auth/src/userauth_async_stub.cpp",
    "${userauth_frameworks_path}/user_auth/src/userauth_proxy.cpp",
    "${userauth_frameworks_path}/user_auth/src/user_auth.cpp",
  ]

  configs = [
    "//base/user_iam/user_auth/common/logs/user_auth:utils_config",
    ":userauth_private_config",
  ]

  public_configs = [ ":userauth_public_config" ]

  deps = [
    "//base/user_iam/auth_executor_mgr/interfaces/innerkits:coauth_framework",
    "//utils/native/base:utils",
  ]

  if (ability_runtime_graphics) {
    deps += [
      "//base/user_iam/face_auth/interfaces/innerkits/faceauth:faceauth_framework",
      "//foundation/graphic/standard:libsurface",
    ]
    defines = [ "SUPPORT_SURFACE" ]
  }

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "${userauth_native_part_name}"
}
