# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/aafwk/standard/aafwk.gni")

config("userauth_framework_public_config") {
  include_dirs = [
    "inc",
    "//base/user_iam/user_auth/interfaces/inner_api/user_auth",
    "//base/user_iam/user_auth/interfaces/inner_api/common",
  ]
}

ohos_shared_library("userauth_framework") {
  include_dirs = [ "inc" ]

  sources = [
    "src/user_auth.cpp",
    "src/user_auth_native.cpp",
    "src/userauth_async_stub.cpp",
    "src/userauth_proxy.cpp",
  ]

  deps = [ "//base/user_iam/user_auth/frameworks/co_auth:coauth_framework" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  if (defined(ability_runtime_graphics) && ability_runtime_graphics) {
    deps += [ "//foundation/graphic/graphic_2d:libsurface" ]
    external_deps += [ "face_auth:faceauth_framework" ]
    defines = [ "SUPPORT_SURFACE" ]
  }

  configs = [ "//base/user_iam/user_auth/common:iam_log_config" ]

  public_configs = [ ":userauth_framework_public_config" ]

  part_name = "user_auth"
}
