# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

config("userauth_framework_public_config") {
  include_dirs = [
    "inc",
    "//base/useriam/user_auth_framework/interfaces/inner_api/user_auth",
    "//base/useriam/user_auth_framework/interfaces/inner_api/common",
  ]
}

ohos_shared_library("userauth_framework") {
  include_dirs = [
    "inc",
    "//base/useriam/user_auth_framework/common/utils",
    "//base/useriam/user_auth_framework/common/logs",
    "//base/useriam/user_auth_framework/dfx/inc",
  ]

  sources = [
    "//base/useriam/user_auth_framework/dfx/src/iam_hitrace_helper.cpp",
    "src/user_auth.cpp",
    "src/user_auth_native.cpp",
    "src/userauth_async_stub.cpp",
    "src/userauth_proxy.cpp",
  ]

  deps = [
    "//base/useriam/user_auth_framework/frameworks/co_auth:coauth_framework",
  ]

  external_deps = [
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  if (defined(ability_runtime_graphics) && ability_runtime_graphics) {
    deps += [ "//foundation/graphic/graphic_2d:libsurface" ]
    external_deps += [ "face_auth:faceauth_framework" ]
    defines = [ "SUPPORT_SURFACE" ]
  }

  configs = [ "//base/useriam/user_auth_framework/common:iam_log_config" ]

  public_configs = [ ":userauth_framework_public_config" ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  part_name = "user_auth_framework"
}
