# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("useridm_public_config") {
  include_dirs = [
    "inc",
    "//base/user_iam/user_auth/interfaces/inner_api/user_idm",
  ]
}

ohos_shared_library("useridm_framework") {
  include_dirs = [
    "inc",
    "//base/user_iam/user_auth/interfaces/inner_api/common",
    "//base/user_iam/user_auth/common/logs/user_auth/inc",
    "//base/user_iam/user_auth/services/user_idm/inc",
    "//base/user_iam/user_auth/common/logs/user_idm",
    "//base/user_iam/user_auth/interfaces/inner_api/user_idm",
  ]

  sources = [
    "src/user_idm.cpp",
    "src/useridm_callback_stub.cpp",
    "src/useridm_client.cpp",
    "src/useridm_getinfo_callback_stub.cpp",
    "src/useridm_getsecinfo_callback_stub.cpp",
    "src/useridm_proxy.cpp",
  ]

  public_configs = [ ":useridm_public_config" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  part_name = "user_auth"
}
