# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("useridm_public_config") {
  include_dirs = [
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/inc",
    "//base/useriam/user_auth_framework/frameworks/legacy/inner_api_old/common",
    "//base/useriam/user_auth_framework/frameworks/legacy/inner_api_old/user_idm",
  ]
}

ohos_shared_library("useridm_framework") {
  include_dirs = [
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/inc",
    "//base/useriam/user_auth_framework/frameworks/legacy/inner_api_old/common",
    "//base/useriam/user_auth_framework/common/logs/user_auth/inc",
    "//base/useriam/user_auth_framework/services/user_idm/inc",
    "//base/useriam/user_auth_framework/common/logs/user_idm",
    "//base/useriam/user_auth_framework/frameworks/legacy/inner_api_old/user_idm",
    "//base/useriam/user_auth_framework/common/utils",
    "//base/useriam/user_auth_framework/common/logs",
  ]

  sources = [
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/user_idm.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/useridm_callback_stub.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/useridm_client.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/useridm_getinfo_callback_stub.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/useridm_getsecinfo_callback_stub.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/useridm_proxy.cpp",
  ]

  public_configs = [ ":useridm_public_config" ]

  deps = [ "//base/useriam/user_auth_framework/frameworks/native/common:dfx" ]

  external_deps = [
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  part_name = "user_auth_framework"
}
