# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("userauth_service_base_config") {
  include_dirs = [ "inc" ]
}

ohos_source_set("userauth_service_base") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  include_dirs = [ "inc" ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  sources = [
    "src/finite_state_machine_builder.cpp",
    "src/finite_state_machine_impl.cpp",
    "src/hdi_wrapper.cpp",
    "src/relative_timer.cpp",
    "src/thread_handler_impl.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_user_auth:libuser_auth_proxy_2.0",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  public_configs = [ ":userauth_service_base_config" ]

  configs = [
    "../../common:iam_log_config",
    "../../common:iam_utils_config",
  ]

  subsystem_name = "useriam"
  part_name = "user_auth_framework"
}
