# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/user_auth/userauth.gni")

config("coauth_private_config") {
  include_dirs = [
    "inc",
    "//base/user_iam/user_auth/services/co_auth/common/interface",
  ]
}

config("coauth_public_config") {
  include_dirs = [ "inc" ]
}

ohos_shared_library("coauthservice") {
  sources = [
    "src/auth_res_manager.cpp",
    "src/auth_res_pool.cpp",
    "src/call_monitor.cpp",
    "src/coauth_manager.cpp",
    "src/coauth_service.cpp",
    "src/coauth_stub.cpp",
    "src/coauth_thread_pool.cpp",
    "src/executor_messenger.cpp",
  ]

  configs = [
    "//base/user_iam/user_auth/common/logs/co_auth:utils_config",
    ":coauth_private_config",
  ]

  public_configs = [ ":coauth_public_config" ]

  deps = [
    "//base/user_iam/user_auth/frameworks/co_auth:coauth_framework",
    "//base/user_iam/user_auth/services/co_auth/common:useriam_common_lib",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
  ]

  part_name = "${coauth_native_part_name}"
}
