# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("userauth_service_context_config") {
  include_dirs = [ "inc" ]
}

ohos_source_set("userauth_service_context") {
  include_dirs = [ "inc" ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  sources = [
    "src/base_context.cpp",
    "src/context_callback_impl.cpp",
    "src/context_factory.cpp",
    "src/context_helper.cpp",
    "src/context_pool_impl.cpp",
    "src/enroll_context.cpp",
    "src/identify_context.cpp",
    "src/simple_auth_context.cpp",
    "src/trace.cpp",
  ]

  deps = [
    "//base/useriam/user_auth_framework/common:iam_utils",
    "//base/useriam/user_auth_framework/frameworks/native/common:attributes",
    "//base/useriam/user_auth_framework/frameworks/native/common:dfx",
    "//base/useriam/user_auth_framework/frameworks/native/ipc:userauth_service_ipc",
    "//base/useriam/user_auth_framework/services/base:userauth_service_base",
    "//base/useriam/user_auth_framework/services/core:userauth_service_core",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "drivers_interface_user_auth:libuser_auth_proxy_1.0",
    "hilog_native:libhilog",
    "hitrace_native:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  public_configs = [ ":userauth_service_context_config" ]

  configs = [ "//base/useriam/user_auth_framework/common:iam_log_config" ]

  part_name = "user_auth_framework"
}
