# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("userauth_service_context_config") {
  include_dirs = [ "inc" ]
}

ohos_source_set("userauth_service_context") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  include_dirs = [
    "inc",
    "../../frameworks/js/napi/user_auth/inc",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  sources = [
    "src/base_context.cpp",
    "src/context_callback_impl.cpp",
    "src/context_factory.cpp",
    "src/context_helper.cpp",
    "src/context_pool_impl.cpp",
    "src/enroll_context.cpp",
    "src/identify_context.cpp",
    "src/simple_auth_context.cpp",
    "src/trace.cpp",
    "src/ui_extension_ability_connection.cpp",
    "src/widget_client.cpp",
    "src/widget_context.cpp",
    "src/widget_context_callback_impl.cpp",
    "src/widget_json.cpp",
  ]

  deps = [
    "../../frameworks/native/common:attributes",
    "../../frameworks/native/common:dfx",
    "../../services/core:userauth_service_core",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_context_native",
    "ability_runtime:abilitykit_native",
    "ability_runtime:extension_manager",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "napi:ace_napi",
  ]

  public_configs = [ ":userauth_service_context_config" ]

  configs = [
    "../base:userauth_service_base_config",
    "../../common:iam_log_config",
    "../../common:iam_utils_config",
    "../../frameworks/native/ipc:userauth_client_ipc_config",
  ]

  subsystem_name = "useriam"
  part_name = "user_auth_framework"
}
