# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("userauth_service_remote_connect_config") {
  include_dirs = [ "inc" ]
}

ohos_source_set("userauth_service_remote_connect") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  include_dirs = [ "inc" ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  sources = [
    "src/device_manager_util.cpp",
    "src/remote_connect_listener.cpp",
    "src/remote_connect_listener_manager.cpp",
    "src/remote_connect_manager.cpp",
    "src/socket_factory.cpp",
    "src/soft_bus_base_socket.cpp",
    "src/soft_bus_client_socket.cpp",
    "src/soft_bus_manager.cpp",
    "src/soft_bus_message.cpp",
    "src/soft_bus_server_socket.cpp",
    "src/soft_bus_socket_listener.cpp",
    "src/system_ability_listener.cpp",
  ]

  deps = [ "../../frameworks/native/common:attributes" ]

  external_deps = [
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "init:libbegetutil",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  public_configs = [ ":userauth_service_remote_connect_config" ]

  configs = [
    "../base:userauth_service_base_config",
    "../../common:iam_log_config",
    "../../common:iam_utils_config",
  ]

  subsystem_name = "useriam"
  part_name = "user_auth_framework"
}
